objects/LLC_BI__Pricing_Payment_Component__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is required. It is manually populated. It indicates the amount of the payment for the Pricing Payment Component record.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Base_Principal_Payment_On__c</fullName>
        <description>The user manually populates this optional picklist field to determine how the system calculates the principal portion of the payment.</description>
        <inlineHelpText>Select flat amount, percentage of balance, or percentage of outstanding, to determine your principal payment.</inlineHelpText>
        <label>Base Principal Payment On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Amount</fullName>
                </value>
                <value>
                    <fullName>Percent of Balance</fullName>
                </value>
                <value>
                    <fullName>Percent of Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>This field is optional. It is manually populated. The loan officer uses this text field to add comments to the payment.</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Count__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency__c</fullName>
        <description>This field is required. It is manually populated. It indicates the Payment Frequency for a Pricing Payment Component record.</description>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency_Monthly</fullName>
                    <default>true</default>
                    <label>Frequency_Monthly</label>
                </value>
                <value>
                    <fullName>Frequency_Annually</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Includes_Interest__c</fullName>
        <defaultValue>true</defaultValue>
        <description>--DEPRECATED--</description>
        <label>-D Includes Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Includes_Principal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>--DEPRECATED--</description>
        <label>-D Includes Principal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Frequency__c</fullName>
        <description>--DEPRECATED--</description>
        <label>-D Interest Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency_Monthly</fullName>
                </value>
                <value>
                    <fullName>Frequency_Annually</fullName>
                    <default>true</default>
                    <label>Frequency_Annually</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Payment_Frequency__c</fullName>
        <description>This field is required if payment type is not &quot;P&amp;I&quot;. It is manually populated. It indicates the frequency requirements for Interest Payments.</description>
        <label>Interest Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency_Monthly</fullName>
                    <default>true</default>
                    <label>Frequency_Monthly</label>
                </value>
                <value>
                    <fullName>Frequency_Annually</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Unit__c</fullName>
        <description>--DEPRECATED-- Interest Unit</description>
        <inlineHelpText>Interest Unit</inlineHelpText>
        <label>-D Interest Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Value__c</fullName>
        <description>--DEPRECATED-- Interest Value</description>
        <inlineHelpText>Interest Value</inlineHelpText>
        <label>-D Interest Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and is manually populated. It indicates whether or not the payment for a Pricing Payment Component record is fixed.</description>
        <label>Is Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Payment__c</fullName>
        <description>The system or user populates this mandatory field with the highest possible payment amount on a payment stream.</description>
        <inlineHelpText>This system or user populated field displays the highest possible payment amount on a payment stream.</inlineHelpText>
        <label>Maximum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Payment__c</fullName>
        <description>The system or user populates this optional number field with the lowest possible payment amount on a payment stream.</description>
        <inlineHelpText>This system or user populated field displays the lowest possible payment amount on a payment stream.</inlineHelpText>
        <label>Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Type__c</fullName>
        <description>The administrator populates this optional picklist to reflect payment types.</description>
        <inlineHelpText>Specifies the payment type of a payment stream.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal &amp; Interest</fullName>
                </value>
                <value>
                    <fullName>Principal + Interest</fullName>
                </value>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Of_Total_Loan_Amount__c</fullName>
        <description>The user populates this optional percentage field if they select a percent of balance or percent of outstanding. This percentage field reflects the users desired percentage  principal amount.</description>
        <label>Percent of Principal</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Stream__c</fullName>
        <description>This field is required. It is automatically populated. It identifies the Pricing Stream record associated to the Pricing Payment Component record.</description>
        <label>Pricing Stream</label>
        <referenceTo>LLC_BI__Pricing_Stream__c</referenceTo>
        <relationshipLabel>Pricing Payment Components</relationshipLabel>
        <relationshipName>Pricing_Payment_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Amount__c</fullName>
        <description>The user manually populates this currency field if they select a flat amount in the Base Principal Payment On field. This currency field reflects the users desired flat amount.</description>
        <inlineHelpText>Enter the flat amount desired for your principal payment.</inlineHelpText>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_As_Percent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user manually populates this optional Boolean field. It is false by default. When true, the principal payment amount is calculated via the Percent of Total Loan Amount field.</description>
        <label>Base Payment On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Principal_Payment_Frequency__c</fullName>
        <description>This field is required. It is manually populated. It indicates the frequency requirements for Principal Payments.</description>
        <label>Principal Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Frequency_Monthly</fullName>
                    <default>true</default>
                    <label>Frequency_Monthly</label>
                </value>
                <value>
                    <fullName>Frequency_Annually</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Stream__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- The rate stream associated with this payment stream.</description>
        <label>-D Rate Stream</label>
        <referenceTo>LLC_BI__Pricing_Stream__c</referenceTo>
        <relationshipLabel>-D Streams</relationshipLabel>
        <relationshipName>Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Skip_Months__c</fullName>
        <description>The user manually populates this optional multiselect picklist field to specify the months they would like to skip in their payment stream.</description>
        <inlineHelpText>Select the months you would like to skip payments.</inlineHelpText>
        <label>Skip Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>January</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>February</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>March</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>April</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>May</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>June</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>July</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>August</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>September</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>October</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>November</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>December</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>Type of Component</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cm_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to LLC_BI__Loan__c object. Populated by a process builder.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Pricing Payment Components</relationshipLabel>
        <relationshipName>Pricing_Payment_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pricing Payment Component</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Payment Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>